Performing preliminary unit tests and fixing bugs
Fixing:
- Comparaison needed to be int32_t not uint32_t.
- ?DUP NIP 2SWAP
Missing: NEGATE ABS

--- a/src/forth/standalone/TODO
+++ b/src/forth/standalone/TODO
@@ -85,7 +85,7 @@ Ajouter un mode interactif au standalone
 
 Faire une sauvegarde de LAST et HERE avant de parser un fichier afin de pouvoir restaurer le dico
 
-Ecrire HEX et DECIMAL dans des fichiers qui s'incluent c'est prendre le risque d'un effet de bord.
+Ecrire HEX et DECIMAL dans des fichiers qui s'incluent c'est prendre le risque d'un effet de bord ==> empiler m_base quand on parse un nouveau stream
 
 Faire une fenetre special Forth "interactive" et qui demande pas de sauvegarder a la fin de la session.
 
