Add GPLv3 header

--- a/INSTALL
+++ b/INSTALL
@@ -22,7 +22,7 @@ Confere le manuel PDF pour plus d'infos sur le fonctionnement du logiciel.
 AUTEURS
 =======
 
-Fait en 2004, projet info-spe EPITA, promo 2007.
+Fait en 2004, projet info-spe EPITA, promotio 2007.
 
 Quentin QUADRAT,
 Minh-long NGUYEN,
