Fix mysql path in the Linux build script

--- a/INSTALL
+++ b/INSTALL
@@ -1,16 +1,16 @@
 INSTALLATION
 ============
 
-SimTaDyn necessite la presence de MySQL, GTK+2.0, GtkGLExt 1.0, GLUT, libncurses.
+SimTaDyn necessite la presence de MySQL, GTK+2.0, GtkGLExt 1.0, GLUT, libncurses, mariadb (pour mysql).
 Fonctionne avec Linux, et MacOs X 10.3 avec le serveur X11.
 
 Ubuntu:
 taper ./build.sh dans le dossier src pour installer le programme.
 Puis taper puis ./Simtadyn pour l'executer (toujours dans le dossier src).
 
- gcc -w -Wall -g -O2 -I/usr/include/mysql *.c -o SimTaDyn `pkg-config --cflags --libs gtk+-2.0 gtkglext-1.0` -lGL -lglut -lm -lglib-2.0 -lpangocairo-1.0 -latk-1.0 -lgdk_pixbuf-2.0 -lpango-1.0 -lgmodule-2.0 -lgobject-2.0 -lgthread-2.0 -lcairo `mysql_config --cflags --libs`
- gcc -w -Wall -g -O2 -I/usr/include/mysql generator.c -o generator `mysql_config --cflags --libs`
- gcc -w -Wall -g -O2 -I/usr/include/mysql xml2mysql.c -o xml2mysql `mysql_config --cflags --libs`
+ gcc -w -Wall -g -O2 *.c -o SimTaDyn `pkg-config --cflags --libs mariadb gtk+-2.0 gtkglext-1.0` -lGL -lglut -lm -lglib-2.0 -lpangocairo-1.0 -latk-1.0 -lgdk_pixbuf-2.0 -lpango-1.0 -lgmodule-2.0 -lgobject-2.0 -lgthread-2.0 -lcairo
+ gcc -w -Wall -O3 generator/generator.c -o SimTaDyn-generator `pkg-config --cflags --libs mariadb`
+ gcc -w -Wall -O3 generator/xml2mysql.c -o SimTaDyn-xml2mysql `pkg-config --cflags --libs mariadb`
 
 REMARQUE
 ========
